syntax = "proto3";
package Forum;

message PostData
{
	int32 Id = 1;
	string Message = 2;
	User User = 3;
}

message User
{
	int32 Id = 1;
	string Name = 2;
	Roll Roll = 3;
}

message PostForumReq
{
	//Data
	PostData data = 1;
}

message ForumData
{
	repeated PostData data = 1;
}

message ForumInfo
{
	map<int32, User> users = 1;

	message forum_nest_info
	{
		map<int32, PostData> user_post = 1;
	}
}



//ロールです
enum Roll{
	//ゲスト
	Guest = 0;
	//マスター
	Master = 1;
}
